force-app/main/default/objects/Reservation__c/fields/Booking_Channel__c.field-meta.xml
<CustomField>
    <fullName>Booking_Channel__c</fullName>
    <label>Booking Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Online Travel Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>