force-app/main/default/objects/Reservation__c/fields/Check_in_Has_Passed__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Has_Passed__c</fullName>
    <formula>TODAY() &gt; Check_in_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check-in Has Passed</label>
    <type>Checkbox</type>
</CustomField>