force-app/main/default/objects/Reservation__c/fields/Rate_Plan__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan__c</fullName>
    <label>Rate Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Rate</fullName>
            </value>
            <value>
                <fullName>Group Rate</fullName>
            </value>
            <value>
                <fullName>Promotional Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>