force-app/main/default/objects/Reservation__c/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <label>Special Requests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Extra pillows</fullName>
            </value>
            <value>
                <fullName>Late check-in</fullName>
            </value>
            <value>
                <fullName>Early check-out</fullName>
            </value>
            <value>
                <fullName>High floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>