force-app/main/default/objects/Reservation__c/fields/Taxes_and_Fees__c.field-meta.xml
<CustomField>
    <fullName>Taxes_and_Fees__c</fullName>
    <label>Taxes and Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>